# math-function-from-string

./: .travis.yml  CMakeLists.txt  README.md  build.sh  function_from_string_settings.h  get_function_from_string.cpp  get_function_from_string.h
src/: function_linux.h  function_win.h  get_function_from_string_impl.cpp  get_function_from_string_impl.h  utility.h
tests/: CMakeLists.txt  cmath_functions_tests.cpp  function.h  get_function_from_string_tests.cpp  main.cpp  simple_functions_tests.cpp  temp.cpp  utility_tests.h
